minitrace-macro/tests/trace/ui/err/has-duplicated-arguments.rs
use minitrace::trace;

#[trace(name = "Name", name = "Name")]
fn f() {}

fn main() {}
